# ai_sport_summarize

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  debug_tunnel.py  docker-compose.yaml  groq_client.py  main.py  match_processor.py  pyproject.toml  requirements.txt  smart_summarizer.py  stream_capture.py  summarizer_service.py  telegram_bot.py  transcriber_service.py
src/: bot.py  config.py  downloader.py  main.py  processor.py
